ValueProfile/PredictedType contains dead code, and doesn't recognize functions https://bugs.webkit.org/show_bug.cgi?id=72065

Reviewed by Gavin Barraclough and Geoff Garen.

Added PredictFunction support, and did some cleaning up along the way.
ValueProfile no longer has statistics machinery, because we never used
it. Rearranged some bits in PredictedType to more easily make room for
one more object type. Changed some debug code to use more consistent
conventions (ByteArray becomes Bytearray so that if we ever have a
"Byte" prediction we don't get confused between a prediction that is
the union of Byte and Array and a prediction that indicates precisely
a ByteArray).

* bytecode/PredictedType.cpp:
(JSC::predictionToString):
(JSC::predictionFromClassInfo):
* bytecode/PredictedType.h:
(JSC::isFunctionPrediction):
* bytecode/ValueProfile.cpp:
* bytecode/ValueProfile.h:
(JSC::ValueProfile::dump):
* dfg/DFGAbstractState.cpp:
(JSC::DFG::AbstractState::execute):
* dfg/DFGPropagator.cpp:
(JSC::DFG::Propagator::propagateNodePredictions):



Canonical link: https://commits.webkit.org/88471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99910 268f45cc-cd09-0410-ab3c-d52691b4dbfc