Source/JavaScriptCore/bytecode/ValueProfile.h
@@ -43,8 +43,6 @@ struct ValueProfile {
     static const unsigned numberOfSpecFailBuckets = 1;
     static const unsigned bucketIndexMask = numberOfBuckets - 1;
     static const unsigned totalNumberOfBuckets = numberOfBuckets + numberOfSpecFailBuckets;
-    static const unsigned certainty = totalNumberOfBuckets * totalNumberOfBuckets;
-    static const unsigned majority = certainty / 2;
     
     ValueProfile(int bytecodeOffset)
         : m_bytecodeOffset(bytecodeOffset)
@@ -96,154 +94,13 @@ struct ValueProfile {
         return false;
     }
     
-    static unsigned computeProbability(unsigned counts, unsigned numberOfSamples)
-    {
-        if (!numberOfSamples)
-            return 0;
-        return counts * certainty / numberOfSamples;
-    }
-    
-    unsigned numberOfInt32s() const
-    {
-        unsigned result = 0;
-        for (unsigned i = 0; i < totalNumberOfBuckets; ++i) {
-            if (JSValue::decode(m_buckets[i]).isInt32())
-                result++;
-        }
-        return result;
-    }
-        
-    unsigned numberOfDoubles() const
-    {
-        unsigned result = 0;
-        for (unsigned i = 0; i < totalNumberOfBuckets; ++i) {
-            if (JSValue::decode(m_buckets[i]).isDouble())
-                result++;
-        }
-        return result;
-    }
-        
-    unsigned numberOfCells() const
-    {
-        unsigned result = 0;
-        for (unsigned i = 0; i < totalNumberOfBuckets; ++i) {
-            if (!!classInfo(i))
-                result++;
-        }
-        return result;
-    }
-    
-    unsigned numberOfObjects() const
-    {
-        unsigned result = 0;
-        for (unsigned i = 0; i < totalNumberOfBuckets; ++i) {
-            const ClassInfo* ci = classInfo(i);
-            if (!!ci && ci->isSubClassOf(&JSObject::s_info))
-                result++;
-        }
-        return result;
-    }
-    
-    unsigned numberOfFinalObjects() const
-    {
-        unsigned result = 0;
-        for (unsigned i = 0; i < totalNumberOfBuckets; ++i) {
-            if (classInfo(i) == &JSFinalObject::s_info)
-                result++;
-        }
-        return result;
-    }
-    
-    unsigned numberOfStrings() const
-    {
-        unsigned result = 0;
-        for (unsigned i = 0; i < totalNumberOfBuckets; ++i) {
-            if (classInfo(i) == &JSString::s_info)
-                result++;
-        }
-        return result;
-    }
-    
-    unsigned numberOfArrays() const
-    {
-        unsigned result = 0;
-        for (unsigned i = 0; i < totalNumberOfBuckets; ++i) {
-            if (classInfo(i) == &JSArray::s_info)
-                result++;
-        }
-        return result;
-    }
-    
-    unsigned numberOfBooleans() const
-    {
-        unsigned result = 0;
-        for (unsigned i = 0; i < totalNumberOfBuckets; ++i) {
-            if (JSValue::decode(m_buckets[i]).isBoolean())
-                result++;
-        }
-        return result;
-    }
-        
-    // These methods are not particularly optimized, in that they will each
-    // perform two passes over the buckets array. However, they are
-    // probably the best bet unless you are sure that you will be making
-    // these calls with high frequency.
-        
-    unsigned probabilityOfInt32() const
-    {
-        return computeProbability(numberOfInt32s(), numberOfSamples());
-    }
-        
-    unsigned probabilityOfDouble() const
-    {
-        return computeProbability(numberOfDoubles(), numberOfSamples());
-    }
-    
-    unsigned probabilityOfCell() const
-    {
-        return computeProbability(numberOfCells(), numberOfSamples());
-    }
-    
-    unsigned probabilityOfObject() const
-    {
-        return computeProbability(numberOfObjects(), numberOfSamples());
-    }
-    
-    unsigned probabilityOfFinalObject() const
-    {
-        return computeProbability(numberOfFinalObjects(), numberOfSamples());
-    }
-    
-    unsigned probabilityOfArray() const
-    {
-        return computeProbability(numberOfArrays(), numberOfSamples());
-    }
-    
-    unsigned probabilityOfString() const
-    {
-        return computeProbability(numberOfStrings(), numberOfSamples());
-    }
-    
-    unsigned probabilityOfBoolean() const
-    {
-        return computeProbability(numberOfBooleans(), numberOfSamples());
-    }
-
 #ifndef NDEBUG
     void dump(FILE* out)
     {
         fprintf(out,
-                "samples = %u, int32 = %u (%u), double = %u (%u), cell = %u (%u), object = %u (%u), final object = %u (%u), array = %u (%u), string = %u (%u), boolean = %u (%u), prediction = %s, samples in prediction = %u",
-                numberOfSamples(),
-                probabilityOfInt32(), numberOfInt32s(),
-                probabilityOfDouble(), numberOfDoubles(),
-                probabilityOfCell(), numberOfCells(),
-                probabilityOfObject(), numberOfObjects(),
-                probabilityOfFinalObject(), numberOfFinalObjects(),
-                probabilityOfArray(), numberOfArrays(),
-                probabilityOfString(), numberOfStrings(),
-                probabilityOfBoolean(), numberOfBooleans(),
-                predictionToString(m_prediction), m_numberOfSamplesInPrediction);
+                "samples = %u, prediction = %s",
+                totalNumberOfSamples(),
+                predictionToString(m_prediction));
         bool first = true;
         for (unsigned i = 0; i < totalNumberOfBuckets; ++i) {
             JSValue value = JSValue::decode(m_buckets[i]);
@@ -258,31 +115,6 @@ struct ValueProfile {
         }
     }
 #endif
-    
-    struct Statistics {
-        unsigned samples;
-        unsigned int32s;
-        unsigned doubles;
-        unsigned cells;
-        unsigned objects;
-        unsigned finalObjects;
-        unsigned arrays;
-        unsigned strings;
-        unsigned booleans;
-        
-        Statistics()
-        {
-            bzero(this, sizeof(Statistics));
-        }
-    };
-    
-    // Method for incrementing all relevant statistics for a ClassInfo, except for
-    // incrementing the number of samples, which the caller is responsible for
-    // doing.
-    static void computeStatistics(const ClassInfo*, Statistics&);
-
-    // Optimized method for getting all counts at once.
-    void computeStatistics(Statistics&) const;
     
     // Updates the prediction and returns the new one.
     PredictedType computeUpdatedPrediction();
